[gd_scene load_steps=2 format=3 uid="uid://b4grmku7ndknm"]

[ext_resource type="Script" path="res://GameFiles/GameSystems/GameState/GameState.gd" id="1_ip225"]

[node name="GameState" type="Node2D"]
script = ExtResource("1_ip225")
<<<<<<< HEAD
ExpansionSpawnTimer = 30.0
=======
ConquerStateTimerRange = Vector2(4, 4)
ExpansionStateTimerRange = Vector2(60, 70)
>>>>>>> parent of 6f0780c (Merge branch 'main' into Timer-and-Spawns)

[node name="EnemySpawnTimer" type="Timer" parent="."]

[node name="StateTimer" type="Timer" parent="."]

[connection signal="timeout" from="EnemySpawnTimer" to="." method="_on_enemy_spawn_timer_timeout"]
[connection signal="timeout" from="StateTimer" to="." method="_on_state_timer_timeout"]
